[package]
name = "definitely_only_once"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "A library for ensuring that a function is only called once in the worst way."
homepage = "https://github.com/MechanicalOrange5/definitely-only-once"
repository = "https://github.com/MechanicalOrange5/definitely-only-once"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
